@@ -9,5 +9,4 @@
 #undef USE_MONO_MUTEX
 #undef HAVE_LARGE_FILE_SUPPORT
 #undef PLATFORM_WIN32
-#undef PLATFORM_WIN32_NATIVE
 #undef HAVE_NEW_ICONV
